k8s-ingress-controller/jsonplaceholder.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jsonplaceholder
  labels:
    app: jsonplaceholder
    service: jsonplaceholder
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: jsonplaceholder
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsonplaceholder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsonplaceholder
      version: v1
  template:
    metadata:
      labels:
        app: jsonplaceholder
        version: v1
    spec:
      containers:
      - image: svenwal/jsonplaceholder
        imagePullPolicy: IfNotPresent
        name: jsonplaceholder
        ports:
        - name: http
          containerPort: 3000
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
          - name: config
            mountPath: "/etc/peregrine/register"
            readOnly: true
      volumes:
      - name: config
        secret:
          secretName: 81800b59-776e-4f27-be3a-d58084edeece    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsonplaceholder
spec:
  ingressClassName: ingress-http.gateway
  rules:
  - http:
      paths:
      - path: /api(/users/.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: jsonplaceholder
            port:
              number: 80
